# audiovis

./: CMakeLists.txt  README.md
cmake/: Findportaudio.cmake
include/: audio_helper.h  audiovis.h  events.h  visual.h  window.h
src/: audio_helper.cpp  audiovis.cpp  events.cpp  visual.cpp  window.cpp
